# editor

lite-cpp/: CMakeLists.txt  README.md  config.lite
lite-cpp/src/: Buffer.cpp  Buffer.hpp  Change.cpp  Change.hpp  Common.hpp  Editor.cpp  Editor.hpp  main.cpp
lite-cpp/src/frontend/: IFrontend.hpp  Input.hpp  Terminal.cpp  Terminal.hpp
lite-cpp/src/lang/: Builtin.cpp  Builtin.hpp  Environment.cpp  Environment.hpp  Expr.cpp  Expr.hpp  Interpreter.hpp  Parser.cpp  Parser.hpp
